--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/react-dom": "^18.0.10",
     "babel-loader": "^9.1.0",
     "core-js": "^3.27.0",
+    "css-loader": "^6.7.3",
     "regenerator-runtime": "^0.13.11",
+    "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
