--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^9.1.0",
     "core-js": "^3.27.0",
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
